# naunet_dense_cloud_custom

./: .gitignore  CMakeLists.txt  custgrain.py  demo.ipynb  naunet_config.toml  uclcustreaction.py
include/: naunet.h  naunet_constants.h  naunet_data.h  naunet_macros.h  naunet_physics.h  naunet_utilities.h
src/: CMakeLists.txt  naunet.cpp  naunet_constants.cpp  naunet_fex.cpp  naunet_jac.cpp  naunet_physics.cpp  naunet_rates.cpp  naunet_renorm.cpp
test/: singlegrid.cpp
tests/: CMakeLists.txt  renorm.cpp  singlegrid.cpp  singlegrid.py.in
